# Property_gemini

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.kiro/hooks/: auto-git-commit.kiro.hook  readme-auto-update.kiro.hook
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: crewai.ts
frontend/src/components/: AgentForm.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  PropertySelector.tsx
frontend/src/pages/: AnalysisPage.tsx
output/: research_results.json  unified_report.json
src/output/: research_results.json
src/real_ai_agents/: main.py
src/real_ai_agents/crews/: __init__.py
src/real_ai_agents/crews/interior_design_crew/: __init__.py  interior_design_crew.py
src/real_ai_agents/crews/interior_design_crew/config/: agents.yaml  tasks.yaml
src/real_ai_agents/crews/location_analyzer_crew/: __init__.py  location_analyzer_crew.py
src/real_ai_agents/crews/location_analyzer_crew/config/: agents.yaml  tasks.yaml
src/real_ai_agents/crews/research_crew/: __init__.py  research_crew.py
src/real_ai_agents/crews/research_crew/config/: agents.yaml  tasks.yaml
src/real_ai_agents/tools/: __init__.py  browser_use_extract.py  browser_use_tool.py  crawl4ai_tool.py  exa_search_tool.py  gemini_image_tools.py  google_maps_tools.py
tests/: test_browser_use.py  test_tavily.py
