[project]
name = "real_ai_agents"
version = "0.1.0"
description = "Real_ai_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools[mcp]>=1.9.2",
    "crewai[tools]==1.9.2",
    "google-genai>=1.60.0",
    "litellm>=1.75.3",
    "matplotlib>=3.10.8",
    "mcp>=1.23.3",
    "networkx>=3.4.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "tavily-python>=0.7.19",
    "uv>=0.9.26",
]

[project.scripts]
kickoff = "real_ai_agents.main:kickoff"
run_crew = "real_ai_agents.main:kickoff"
plot = "real_ai_agents.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
