[project]
name = "real_ai_agents"
version = "0.1.0"
description = "Real_ai_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "crawl4ai[all]>=0.8.0",
    "crewai[tools]==1.9.3",
    "google-genai>=1.60.0",
    "matplotlib>=3.10.8",
    "networkx>=3.4.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "tavily-python>=0.7.19"
]

[project.scripts]
kickoff = "real_ai_agents.main:kickoff"
run_crew = "real_ai_agents.main:kickoff"
plot = "real_ai_agents.main:plot"
run_with_trigger = "real_ai_agents.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
